fine esercizio mail  bonus

--- a/mail/Bonus/index.html
+++ b/mail/Bonus/index.html
@@ -12,27 +12,16 @@
     <link rel="stylesheet" href="style.css"> <!-- importazione CSS -->
 
 </head>
-<body>
-
-    <!-- INIZIO header -->
-    <header>
-
-    </header>
-    <!-- FINE header -->
-
+<body class="cont h-100 w-100 bg-info">
 
     <!-- INIZIO main -->
     <main>
-
+        <div class="input-group mb-3 w-50 mx-auto mt-5">
+            <input id="email" type="text" class="form-control" placeholder="Inserisci la tua email" aria-label="Inserisci la tua email" aria-describedby="button-addon2">
+            <button class="btn bg-light" type="button" id="button-addon2">Conferma</button>
+          </div>
     </main>
     <!-- FINE main -->
-
-
-    <!-- INIZIO footer -->
-    <footer>
-
-    </footer>
-    <!-- FINE footer -->
 
     <script type="text/javascript" src="script.js"></script> <!-- importazione JS -->
 </body>
